--- a/atividadePratica_DiagramaClasses/package.json
+++ b/atividadePratica_DiagramaClasses/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx tsc",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/exer1.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/exer1/index.ts"
   },
   "keywords": [],
   "author": "",
